<resources>
    <string name="app_name">Keradion</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="fullname">Full Name</string>
    <string name="username">Username</string>
    <string name="conpassword">Confirm Password</string>
    <string name="open">Navigation Opened</string>
    <string name="close">Navigation Closed</string>
    <string name="bio">Say something about yourself...</string>
</resources>
